# CalPredmetov

./: CMakeLists.txt  build.sh  main.cpp
